Refactored unique filename generation to use UUID in FileTransferConflictUtil
- Replaced incrementing prefix-based approach with UUID prefix for unique filename generation
- Simplified conflict resolution logic in FetchFileTransfer during file move operations
- Improved logging consistency and updated descriptions for MOVE_DESTINATION_DIR property